what can it unlock?

--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -686,6 +686,42 @@
 <!-- More Attempts with Planning-->
 
 
+<!-- What can it unlock?-->
+<section class="section">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3" style="margin-bottom: 2rem;">
+      What can it unlock?
+    </h2>
+    <div class="box">
+      <!-- Ego-centric View to Intention -->
+      <div class="content" style="margin-bottom: 2rem;">
+        <h3 class="subtitle has-text-left"><strong>• Action–Perception Coupling</strong></h3>
+        <p class="subtitle has-text-left">
+          Humans act to see, and see to act.
+        </p>
+
+        <h3 class="subtitle has-text-left"><strong>• Moving Beyond Synthetic Actions</strong></h3>
+        <p class="subtitle has-text-left">
+          Prior world models use abstract control signals—ours models real, physical human action
+        </p>
+
+        <h3 class="subtitle has-text-left"><strong>• Toward Embodied Intelligence</strong></h3>
+        <p class="subtitle has-text-left">
+          Physically grounded video models bring us closer to agents that plan, adapt, and interact like humans
+        </p>
+
+        <h3 class="subtitle has-text-left"><strong>• Intention Understanding Through Prediction</strong></h3>
+        <p class="subtitle has-text-left">
+          Predicting what an agent will see is a path to inferring what it wants
+        </p>
+      </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- What can it unlock?-->
+
+
 <!-- Method-->
 <section class="section">
   <div class="container is-max-desktop">
@@ -705,6 +741,7 @@
   </div>
   </div>
 </section>
+<!-- Method-->
 
 
 <!-- Quantitative Results-->
