--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -124,7 +124,7 @@
                   <!-- Github link -->
                   <span class="link-block">
                     <a href="https://github.com/YOUR REPO HERE" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
+                    class="external-link button is-normal is-rounded is-dark" style="pointer-events: none;">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
