--- a/index.html
+++ b/index.html
@@ -58,6 +58,38 @@
         <div class="one">
           <div class="two" id="nuvo_image">
             <video width="100%" muted autoplay loop>
+              <source src="PEVA/static/videos/PEVA_cover_video.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <img src="images/nuvo.jpg" width="100%">
+        </div>
+      </td>
+      
+      <td style="padding:20px;width:75%;vertical-align:middle">
+        <a href="PEVA/">
+          <span class="papertitle">Whole-Body Conditioned Egocentric Video Prediction</span>
+        </a>
+        <br>
+        Yutong Bai*, <strong>Danny Tran*</strong>, Amir Bar*, Yann LeCun†, Trevor Darrell†, Jitendra Malik†
+        <br>
+        Tech Report
+        <br>
+        <a href="PEVA/">project page</a>
+        <!-- <a href="https://github.com/facebookresearch/nwm/">code</a> -->
+        <!-- <a href="https://huggingface.co/facebook/nwm">models</a> -->
+        <p></p>
+        <p>
+          We train models to Predict Ego-centric Video from human Actions (PEVA), given the past video and an action represented by the relative 3D body pose. We demonstrate PEVA enables some preliminary whole-body planning.
+        </p>
+      </td>
+    </tr>
+
+    <tr>
+      <td style="padding:20px;width:25%;vertical-align:middle">
+        <div class="one">
+          <div class="two" id="nuvo_image">
+            <video width="100%" muted autoplay loop>
               <source src="images/nwm_teaser.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
