--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -103,7 +103,7 @@
                   </div>
 
                   <div class="is-size-5 has-text-centered">
-                    <!-- <span class="publication-cvpr"><strong>Technical Report</strong></span> -->
+                    <span class="publication-cvpr"><strong>NeurIPS 2025</strong></span>
                   </div>
 
                   <div class="column has-text-centered">
