--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <br>
         Yutong Bai*, <strong>Danny Tran*</strong>, Amir Bar*, Yann LeCun†, Trevor Darrell†, Jitendra Malik†
         <br>
-        Tech Report
+        NeurIPS, 2025
         <br>
         <a href="PEVA/">project page</a>
         <!-- <a href="https://github.com/facebookresearch/nwm/">code</a> -->
